Update StringTemplate.java with Java 21 preview notes